--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Drawing App</title>
+    <title>Task List</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div>
+        <input type="text" id="taskInput" placeholder="Enter your task">
+        <button id="addTaskBtn">Add Task</button>
+        <ul id="taskList"></ul>
+    </div>
     <canvas id="myCanvas" width="500" height="500"></canvas>
     <button id="exportBtn">Export as JPG</button>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
