--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task List</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>시간 관리 사이트</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <input type="text" id="taskInput" placeholder="Enter your task">
-        <button id="addTaskBtn">Add Task</button>
-        <ul id="taskList"></ul>
-    </div>
-    <canvas id="myCanvas" width="500" height="500"></canvas>
-    <button id="exportBtn">Export as JPG</button>
-    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+    <div id="time-circle"></div>
+    <textarea id="task-input" placeholder="할 일을 입력하세요"></textarea>
+    <button onclick="addTask()">일정 추가</button>
+
     <script src="script.js"></script>
 </body>
 </html>
