--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <textarea id="task-input" placeholder="할 일을 입력하세요"></textarea>
     <button onclick="addTask()">일정 추가</button>
 
+    <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
