--- a/index.html
+++ b/index.html
@@ -3,15 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>시간 관리 사이트</title>
-    <link rel="stylesheet" href="style.css">
+    <title>시간표 만들기</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+
+        .timetable {
+            position: relative;
+            width: 500px;
+            height: 50px;
+            margin: 20px auto;
+            background-color: #f0f0f0;
+            border-radius: 10px;
+            overflow: hidden;
+        }
+
+        .event {
+            position: absolute;
+            height: 100%;
+            border-radius: 10px;
+            color: #fff;
+            text-align: center;
+            line-height: 50px;
+        }
+    </style>
 </head>
 <body>
-    <div id="time-circle"></div>
-    <textarea id="task-input" placeholder="할 일을 입력하세요"></textarea>
-    <button onclick="addTask()">일정 추가</button>
+    <div>
+        <label for="startTime">시작 시간:</label>
+        <input type="number" id="startTime" min="0" max="23" step="1">
+        <label for="endTime">종료 시간:</label>
+        <input type="number" id="endTime" min="0" max="23" step="1">
+        <label for="eventTitle">제목:</label>
+        <input type="text" id="eventTitle">
+        <button onclick="addEvent()">일정 추가</button>
+    </div>
 
-    <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script src="script.js"></script>
+    <div class="timetable" id="timetable"></div>
+
+    <script>
+        function addEvent() {
+            const startTime = parseInt(document.getElementById("startTime").value);
+            const endTime = parseInt(document.getElementById("endTime").value);
+            const eventTitle = document.getElementById("eventTitle").value;
+
+            const timetable = document.getElementById("timetable");
+            const eventDiv = document.createElement("div");
+
+            const randomColor = getRandomColor();
+            eventDiv.style.backgroundColor = randomColor;
+
+            const leftPosition = (startTime / 24) * 100;
+            const width = ((endTime - startTime) / 24) * 100;
+
+            eventDiv.style.left = leftPosition + "%";
+            eventDiv.style.width = width + "%";
+            eventDiv.textContent = eventTitle;
+
+            eventDiv.classList.add("event");
+            timetable.appendChild(eventDiv);
+        }
+
+        function getRandomColor() {
+            const letters = "0123456789ABCDEF";
+            let color = "#";
+            for (let i = 0; i < 6; i++) {
+                color += letters[Math.floor(Math.random() * 16)];
+            }
+            return color;
+        }
+    </script>
 </body>
 </html>
